2011-03-20  gaetan gourdin  <bouleetbil@frogdev.info>

	* ChangeLog:
	* Packages.mdproj:
	* frugalware-tweak.sln: 
