@@ -18,14 +18,6 @@
             <RootEntry path="frugalware-tweak.sln" id=":root:" />
           </Builder>
         </Package>
-        <Package name="MSBuild (Visual Studio 2005) Sources">
-          <Builder targetFile="releases\frugal-py-tweak.tar.gz" format="MonoDevelop.Projects.FileFormat" ctype="SourcesZipPackageBuilder">
-            <ChildEntries>
-              <SolutionItemReference path="PyUtils\PyUtils.mdproj" />
-            </ChildEntries>
-            <RootEntry path="frugalware-tweak.sln" id=":root:" />
-          </Builder>
-        </Package>
       </Packages>
     </Packages>
     <ReleaseVersion>0.2.4.2</ReleaseVersion>
