@@ -16,6 +16,9 @@
 //  *  Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.
 //  */
 using System;
+using System.Net;
+using System.Web;
+using System.IO;
 namespace frugalmonotools
 {
 	[System.ComponentModel.ToolboxItem(true)]
@@ -27,6 +30,7 @@ namespace frugalmonotools
 		}
 		public void InitHardware()
 		{
+		BTN_Pastbin.Visible=false;
 		if(!MainClass.pacmanG2.IsInstalled("system-config-printer"))
 		{
 			BTN_Printer.Visible=false;
@@ -109,6 +113,55 @@ namespace frugalmonotools
 		
 		
 		
+		protected void OnBTNPastbinClicked (object sender, System.EventArgs e)
+		{
+			try
+			{
+			 
+			    HttpWebRequest request = (HttpWebRequest)
+			    WebRequest.Create("http://www.frugalware.org/paste/");
+			 
+			    request.AllowAutoRedirect = false;
+			    request.Method = "POST";
+			 
+			    string post = "&amp;parent_pid=&amp;format=text&amp;code2=" + HttpUtility.UrlEncode(TXT_Lspci.Buffer.Text) + "&amp;poster=FrugalTweak&amp;paste=Send&amp;expiry=m&amp;email=";
+			    byte[] data = System.Text.Encoding.ASCII.GetBytes(post);
+			 
+			    request.ContentType = "application/x-www-form-urlencoded";
+			    request.ContentLength = data.Length;
+			 
+			    Stream response = request.GetRequestStream();
+			 
+			    response.Write(data,0,data.Length);
+			 
+			    response.Close();
+			 
+			    HttpWebResponse res =(HttpWebResponse) request.GetResponse();
+			    res.Close();
+			    // note that there is no need to hook up a StreamReader and
+			    // look at the response data, since it is of no need
+			 
+			    if (res.StatusCode == HttpStatusCode.Found)
+			    {
+			        Console.WriteLine(res.Headers["location"]);
+			    }
+			    else
+			    {
+			        Console.WriteLine("Error");
+			    }
+			 
+			}
+			catch (Exception ex)
+			{
+			    Console.WriteLine("Error: " + ex.Message);
+			
+			}
+		}
+
+		protected void OnBTNPastbin1Clicked (object sender, System.EventArgs e)
+		{
+			Outils.OpenUrl("http://www.frugalware.org/paste/");
+		}
 	}
 }
 
