@@ -101,15 +101,7 @@ namespace frugalmonotools
 		
 		protected virtual void OnBTNLinkClicked (object sender, System.EventArgs e)
 		{
-			//by default use firefox
-			if (!Outils.Excecute("firefox",BTN_Link.Label,false))
-			{
-				if (!Outils.Excecute("midori",BTN_Link.Label,false))
-				{
-				//last chance :p
-				Outils.Excecute("konqueror",BTN_Link.Label,false);
-				}
-			}
+			Outils.OpenUrl(BTN_Link.Label);
 
 		}
 		
