@@ -1,3 +1,7 @@
+2011-04-16  gaetan gourdin  <bouleetbil@frogdev.info>
+
+	* Packages.mdproj: 
+
 2011-03-20  gaetan gourdin  <bouleetbil@frogdev.info>
 
 	* ChangeLog:
